--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ h3 {
     color: #111;
     text-align: center;
 }
+
+p{
+    margin-bottom: 20px;
+}
 .conteudo {
     color: #777;
     background: white;
@@ -25,16 +29,53 @@ h3 {
 Efeito parallax
 */
 
-.caixa1, .caixa2 {
+.caixa1, .caixa2, .caixa3, .caixa4, .caixa5 {
+    position: relative;
     height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    opacity: 0.8;
+}
+
+
+.conteudo-titulo {
+    position: absolute;
+    top: 45%;
+    width: 100%;
+    text-align: center;
+    
+}
+
+.conteudo-titulo span.titulo {
+    color: #fff;
+    background-color: #111;
+    padding: 18px;
+    font-size: 25px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
 }
 
 .caixa1 {
     background-image: url("../img/imagem1.jpg");
-    background-size: cover;
+    
+    
 }
 
 .caixa2 {
     background-image: url("../img/imagem2.jpg");
-    background-size: cover;
+}
+
+.caixa3 {
+    background-image: url("../img/imagem3.jpg");
+
+}
+
+.caixa4 {
+    background-image: url("../img/imagem4.jpg");
+}
+
+.caixa5 {
+    background-image: url("../img/imagem5.jpg");
 }
